fix(CozyDialogs): Close and Back button z-index
to avoid being above a backdrop

--- a/react/CozyDialogs/styles.styl
+++ b/react/CozyDialogs/styles.styl
@@ -4,7 +4,7 @@
     position absolute
     top 1.15rem
     right 1.15rem
-    z-index var(--zIndex-modal) //needed for an iOS bug https://github.com/cozy/cozy-ui/pull/1790
+    z-index 1
     transform translateY(var(--flagship-top-height))
     +small-screen()
         top 0.25rem
@@ -14,7 +14,7 @@
     position absolute
     top 1.15rem
     left 1.15rem
-    z-index var(--zIndex-modal) //needed for an iOS bug https://github.com/cozy/cozy-ui/pull/1790
+    z-index 1
     +small-screen()
         top 0.25rem
         left 0.25rem
